--- a/src/views/consulta.ejs
+++ b/src/views/consulta.ejs
@@ -48,7 +48,7 @@
                     <div class="form-group">
                         <label for="sel1">Escoja la categoria:</label>
                      
-                        <select class="form-control" id="id_cate">
+                        <select class="form-control" id="nombre_cate" name="nombre_cate">
                             <% for(var i = 0; i < datos.length; i++){ %>
                           <option><%=datos[i].nombre_cate%></option>
                           <% } %>
