--- a/src/public/css/styleProfile.css
+++ b/src/public/css/styleProfile.css
@@ -1,30 +1,35 @@
+body{
+    justify-content: center;
+    align-content: center;
+}
 #above-section{
-    margin-left: 10%;
-    margin-right: 10%;
+    width: 50%;
+    margin: 0 auto;
+    width: 90vw;
+    justify-content: center;
+    align-content: center;
+    margin-top: 2em;
+    margin-bottom: 2em;
     height: 30em;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
 }
 #down-section{
-    margin-left: 10%;
-    margin-right: 10%;
-    height: 40em;
-}
-#profile-details{
-    float:none;
-    overflow:hidden;
-    height: 30em;
+    width: 50%;
+    margin: 0 auto;
+    width: 90vw;
+    height: 64em;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
 }
 #profile-contacts{
-    float:left;
-    height: auto;
-    width: 30em;
-    margin-top: 0em !important;
-    
+    height: 63.15em;
+    width: 25vw;
+    margin-top: 1em !important;
 }
-#profile-products{
-    float:none;
-    overflow:hidden;
-    height: auto;
-    max-height: 63.15em;
+#products-box{
+    margin-left: -17vw;
+    height: 63.15em;
 }
 #profile-image{
     float:left;
@@ -39,10 +44,31 @@
     width: 20em;
 }
 #profile-description{
-    float:none;
+    float:left;
+    overflow:hidden;
+    margin: 0em 1em 1em 1em;
+    height: 21em;
+    width: 40em;
+}
+#profile-details{
+    width: 60vw;
+    overflow:hidden;
+    height: 30em;
+}
+#profile-content{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+#profile-map{
     overflow:hidden;
     margin: 1em 1em 1em 1em;
-    height: 21em;
+    height: 30em;
+}
+iframe{
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    height: 27.5em;
 }
 .contact-box{
     margin: 1em 1em 1em 1em;
@@ -57,7 +83,6 @@
     width: 10em;
     height: 10em;
     float: left;
-
 }
 .contact-text{
     padding-top: 3em;
@@ -66,4 +91,10 @@
     height: 10em;
     margin-top: 2em;
     overflow:hidden;
+}
+#products{
+    padding-left: 1em;
+}
+footer{
+    bottom:0;
 }
