--- a/src/views/Agregar.ejs
+++ b/src/views/Agregar.ejs
@@ -168,7 +168,19 @@
       </div>
       <%}%>
 
+        <div id= map>
 
+        
+        
+         
+
+          <iframe src="https://maps.google.com/maps?q=-33.61892124936999, -71.60408810775205&output=embed" width="360" height="270" frameborder="0" style="border:0"></iframe>
+        </div>
+    
+    
+    
+    
+    
     </div>
     
   
