--- a/src/views/administrador.ejs
+++ b/src/views/administrador.ejs
@@ -401,10 +401,20 @@
            </td>
              <td><%= datos2[i].nombre_usuario %></td>
              <td>
-              <div class="input-group ">
-               <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-               <input id="tipo_contacto" type="text" class="form-control" value="<%= datos2[i].tipo_contacto %>" name="tipo_contacto">
-             </div>
+             
+             <div class="input-group ">
+              <label for="sel1">Tipo de contacto actual: <%=datos2[i].tipo_contacto%></label>
+             <select class="form-control" id="tipo_contacto" value="<%=datos2[i].tipo_contacto%>"name="tipo_contacto">
+           
+            <option>Facebook</option>
+            <option>Pagina Web</option>
+            <option>Instagram</option>
+            <option>Whatsapp</option>
+            <option>Telegram</option>
+            
+     
+          </select>
+        </div>
              </td>
              <td><%= datos2[i].id_contacto %></td>
              <td>
@@ -421,7 +431,18 @@
       <% } %>
   </table>
   </div>
-
+  <%if(estadoContacto==1){%>
+    <div class="w3-panel w3-red">
+      <h3>Error!!</h3>
+      <p>Su contacto no fue actualizado porque tiene campos vacios, ingreselo nuevamente </p>
+    </div>
+   
+      <% }else if(estadoContacto==3){ %>
+        <div class="w3-panel w3-green">
+          <h3>Felicidades</h3>
+          <p>Su categoria fue actualizada correctamente</p>
+        </div>
+        <% } %>
 <div class="w3-container w3-padding w3-section w3-light-blue w3-center">
   <h1 class="w3-xlarge">Categoria</h1>
 </div>
